# org-repo

./: .env.example  .gitattributes  .gitignore  .gitkeep  .gitmodules  .lintstagedrc.json  .npmrc  .prettierignore  .prettierrc.js  .prettierrc.json  AGENTS.md  CLAUDE.md  DiscordBot.Dockerfile  README.md  deployment-lwoggs048goso0kcokgco48s-2026-01-23-06-31-08.txt  devenv.nix  docker-compose.dev.yml  eslint.base.js  eslint.config.mjs  eslint.next.js  next-sitemap.config.cjs  next.config.js  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  redirects.js  tsconfig.base.json  tsconfig.json  turbo.json
.githooks/: pre-commit
.github/: README.md  dependabot.yml  pull_request_template.md
.github/workflows/: backmerge-hotfix.yml  build-and-deploy.yml  ci.yml  lint.yml  preview-deployments.yml  production-deployments.yml  staging-deployments.yml  static-checks.yml
.husky/: pre-commit  pre-push
apps/dgg-political-action/: .env.example  CONTRIBUTING.md  README.md  dgg-volunteer.dbBCK  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  next.config.js  package.json  tailwind.config.mjs  tsconfig.json
apps/digital-ground-game-site/: .editorconfig  .gitignore  Dockerfile  FOOTNOTES_FEATURE_SUMMARY.md  ODOO_DEV_README.md  PYTHON_DEV_SETUP.md  README.md  SETUP_SUMMARY.md  docker-compose.yml  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  setup_dev_env.sh  uv-requirements.txt
apps/digital-ground-game-site/.zed/: settings.json
apps/digital-ground-game-site/addons/blog_footnotes/: FOOTNOTES_USAGE.md  QUICK_START.md  __init__.py  __manifest__.py
apps/digital-ground-game-site/addons/blog_footnotes/demo/: demo_data.xml
apps/digital-ground-game-site/addons/blog_footnotes/models/: __init__.py  footnote.py
apps/digital-ground-game-site/addons/blog_footnotes/security/: ir.model.access.csv
apps/digital-ground-game-site/addons/blog_footnotes/static/src/js/: s_footnotes.js  s_footnotes_options.js
apps/digital-ground-game-site/addons/blog_footnotes/static/src/scss/: s_footnotes.scss
apps/digital-ground-game-site/addons/blog_footnotes/views/snippets/: s_footnotes.xml  snippets.xml
apps/digital-ground-game-site/config/: odoo.conf
apps/discord-bot/: .env.example  .gitignore  .lintstagedrc.json  .typesafe-i18n.json  Dockerfile  README.md  docker-compose.yml  eslint.config.js  mikro-orm.config.ts  package.json  pm2.config.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
apps/pragmatic-papers/: .env.example  .gitignore  .lintstagedrc.json  .npmrc  .prettierignore  .prettierrc.json  Dockerfile  FEATURED-GRID.md  ISSUES.md  README.md  SOCIAL_EMBEDS_ISSUE.md  components.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  next-sitemap.config.cjs  next.config.js  nixpacks.toml  package.json  redirects.js  tailwind.config.mjs  tsconfig.json  vitest.config.ts
dockerfiles/: .env.example  DigitalGroundGame.Dockerfile  DiscordBot.Dockerfile  PragmaticPapers.Dockerfile  PragmaticPapers.dockerignore  README.md  docker-compose.dgg-political-action.yml  docker-compose.pragmatic-papers.yml
dockerfiles/scripts/: copy-database.sh  modify-database-uri.sh  start.sh
scripts/: ansi.mjs  copy-env.mjs  install-fonts.mjs  reset-db.js  updateRecommendations.ts
src/: environment.d.ts  payload-types.ts  payload.config.ts
src/Footer/: Component.tsx  RowLabel.tsx  config.ts
src/Header/: Component.tsx  config.ts
src/access/: admins.ts  checkRole.ts  editorOrSelf.ts  (+3 more)
(+1140 files in other folders)
